<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.telekom.mms.apm.eifeventventconverter</groupId>
    <artifactId>EIFEventConverter</artifactId>
    <version>0.2.3</version>
    <packaging>jar</packaging>
    <name>EIFEventConverter</name>

    <properties>
        <servlet.version>3.1.0</servlet.version>
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.release>11</maven.compiler.release>
        <junit.version>4.13.2</junit.version>
        <log4j.version>2.16.0</log4j.version>
        <instana.version>1.2.0</instana.version>
        <eclipsesource.minimal-json.version>0.9.5</eclipsesource.minimal-json.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <apache.httpcomponents.version>4.5.2</apache.httpcomponents.version>
     </properties>

    <dependencies>
	
	   <dependency>
	      <groupId>org.apache.logging.log4j</groupId>
	      <artifactId>log4j-core</artifactId>
	      <version>${log4j.version}</version>
	   </dependency>

        <dependency>
            <groupId>com.instana</groupId>
            <artifactId>instana-java-sdk</artifactId>
            <version>${instana.version}</version>
        </dependency>

        <dependency>
            <groupId>com.eclipsesource.minimal-json</groupId>
            <artifactId>minimal-json</artifactId>
            <version>${eclipsesource.minimal-json.version}</version>
        </dependency>
        <dependency>
    		<groupId>org.apache.httpcomponents</groupId>
    		<artifactId>httpclient</artifactId>
   		 	<version>${apache.httpcomponents.version}</version>
		</dependency>
        
    </dependencies>

    <build>
        <finalName>EIFEventConverter</finalName>
        <pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>3.0.0-M3</version>
				</plugin>
				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
				</plugin>
				
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>3.0.0-M1</version>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.9.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M5</version>
				
				</plugin>
				<plugin>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.1.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>3.1.1</version>
				</plugin>
				<plugin>
					<groupId>com.github.spotbugs</groupId>
					<artifactId>spotbugs-maven-plugin</artifactId>
					<version>4.2.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-eclipse-plugin</artifactId>
					<version>2.10</version>
				</plugin>
                <plugin>
                <groupId>com.coderplus.maven.plugins</groupId>
                    <artifactId>copy-rename-maven-plugin</artifactId>
                <version>1.0.1</version>
                </plugin>
			</plugins>
		</pluginManagement>
        <plugins>
            <!-- download source code in Eclipse, best practice -->
            <plugin>
                <artifactId>maven-eclipse-plugin</artifactId>
                <configuration>
                    <downloadSources>false</downloadSources>
                    <downloadJavadocs>false</downloadJavadocs>
                </configuration>
            </plugin>
            <plugin><!-- Build an executable JAR -->
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>libs/</classpathPrefix>
                            <mainClass>de.telekom.mms.apm.eifeventconverter.EIFEventConverter</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/libs/</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptors>
                        <descriptor>zip.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <id>make</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- does not work with apm jenkins
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <configuration>

                    <failOnError>false</failOnError>
                </configuration>
                <executions>
                    <execution>
                        <id>spotbugs</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <phase>verify</phase>
                        <configuration>
                            <xmlOutput>true</xmlOutput>
                            <spotbugsXmlOutput>false</spotbugsXmlOutput>
                            <effort>Max</effort>
                            <threshold>Medium</threshold>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            -->
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <configuration>
                    <filesets>
                        <fileSet>
                            <directory>build</directory>
                            <includes>
                                <include>*</include>
                            </includes>
                        </fileSet>
                        <fileSet>
                            <directory>bin</directory>
                            <includes>
                                <include>*</include>
                            </includes>
                        </fileSet>
                        <fileSet>
                            <directory>target</directory>
                            <includes>
                                <include>*</include>
                            </includes>
                        </fileSet>
                        <fileset>
                            <directory>log</directory>
                            <includes>
                                <include>log.out</include>
                                <include>event.out</include>
                            </includes>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.coderplus.maven.plugins</groupId>
                <artifactId>copy-rename-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-file</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <fileSets>
                                <fileSet>
                                    <sourceFile>target/EIFEventConverter-bin.zip</sourceFile>
                                    <destinationFile>build/EIFEventConverter.zip</destinationFile>
                                </fileSet>
                            </fileSets>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <forkCount>3</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                    <testFailureIgnore>true</testFailureIgnore>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
